# urkit

./: .gitignore  CHANGELOG.md  README.md  context7.json  pyproject.toml
.github/workflows/: publish.yml
_demo/: 1_connect.py  2_pick_place.py  3_advanced.py  4_force_contact.py  5_force_monitor.py  config_full.yaml
src/urkit/: __init__.py  __main__.py  config.py  connection.py  exceptions.py  geometry.py  io.py  motion.py  points.py  robot.py  telemetry.py
src/urkit/cli/: __init__.py  colors.py  connection_monitor.py  points.py  teach.py
src/urkit/gripper/: __init__.py  base.py  digital.py  presets.py  robotiq.py  robotiq_preamble.py
tests/: test_exceptions.py  test_geometry.py  test_gripper.py  test_gripper_factory.py  test_gripper_presets.py  test_points.py  test_robot_integration.py
