[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urkit"
version = "0.3.5"
description = "Universal Robots e-Series control toolkit built on ur_rtde"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "URKit Contributors"},
]

keywords = [
    "universal-robots",
    "ur3e",
    "ur5e",
    "ur7e",
    "ur10e",
    "ur12e",
    "ur15",
    "ur16e",
    "ur20",
    "ur30",
    "rtde",
    "robotics",
    "industrial-robot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = [
    "ur_rtde>=1.4.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
]

[project.urls]
Repository = "https://github.com/rodolfo-verde/urkit"

[project.scripts]
urkit = "urkit.__main__:main_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py38"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
